# pybind11-stubgen

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yml
pybind11_stubgen/: printer.py
pybind11_stubgen/parser/: interface.py
pybind11_stubgen/parser/mixins/: fix.py
tests/: check-demo-errors-generation.sh  check-demo-stubs-generation.sh  install-demo-module.sh
tests/errors/: pybind11-v2.11  pybind11-v2.12  pybind11-v2.13
tests/py-demo/bindings/: CMakeLists.txt
tests/py-demo/bindings/src/: main.cpp  modules.h
tests/py-demo/bindings/src/modules/: aliases.cpp  functions.cpp  hidden_builtins.cpp  issues.cpp  methods.cpp  values.cpp
tests/py-demo/demo/pure_python/: functions.py  functions_3_8_plus.py  functions_3_9_plus.py
tests/stubs/python-3.11/pybind11-v2.11/numpy-array-wrap-with-annotated/demo/_bindings/: functions.pyi  numpy.pyi
tests/stubs/python-3.11/pybind11-v2.13/numpy-array-use-type-var/demo/_bindings/: eigen.pyi  properties.pyi  stl_bind.pyi
tests/stubs/python-3.11/pybind11-v2.13/numpy-array-wrap-with-annotated/demo/: __init__.pyi
tests/stubs/python-3.11/pybind11-v2.9/numpy-array-wrap-with-annotated/demo/_bindings/: eigen.pyi  functions.pyi  issues.pyi
tests/stubs/python-3.11/pybind11-v3.0/numpy-array-use-type-var/demo/_bindings/: eigen.pyi  typing.pyi
tests/stubs/python-3.11/pybind11-v3.0/numpy-array-wrap-with-annotated/demo/_bindings/: issues.pyi  numpy.pyi  stl.pyi
tests/stubs/python-3.12/: requirements.txt
tests/stubs/python-3.12/pybind11-v2.13/numpy-array-use-type-var/demo/: core.pyi
(+15 files in other folders)
